--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
   --secondary-title-color: #ffffff;
   --button-bg-color: #f4f4fd;
   --list-color: #404bbf;
+  --color-line: #e7e9fc;
 }
 
 body {
@@ -17,26 +18,63 @@ body {
   letter-spacing: 0.02em;
 }
 .list {
+  margin: 0;
+  padding: 0;
+
   list-style: none;
 }
 .link {
   text-decoration: none;
 }
+h1,
+h2,
+h3,
+p {
+  margin-top: 0;
+  margin-bottom: 0px;
+}
 .section-title {
   color: var(--main-title-color);
 }
+.section {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.no-section {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+.contaner {
+  width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
 
-/* Logo */
+  outline: 2px solid rebeccapurple;
+}
+
+/* Header */
+.header-line {
+  border-bottom: 1px solid var(--color-line);
+}
+.nav-contaner {
+  display: flex;
+  align-items: center;
+}
+.navigation {
+  display: flex;
+  align-items: center;
+}
 
 .logo {
   color: var(--secondary-text-color);
-  text-decoration: none;
 
   font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
   letter-spacing: 0.03em;
+  text-decoration: none;
   text-transform: uppercase;
 }
 .logo .logo-w {
@@ -44,28 +82,45 @@ body {
 }
 
 /* Navigation */
+.nav-list {
+  display: flex;
+  margin-left: 76px;
+}
+.nav-list .nav-item:not(:last-child) {
+  margin-right: 40px;
+}
 .nav-list .nav-link {
+  display: block;
+  padding-top: 24px;
+  padding-bottom: 24px;
+
   color: var(--main-title-color);
-  text-decoration: none;
 
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
+  text-decoration: none;
 }
 .nav-link:hover,
 .nav-link:focus {
   color: var(--list-color);
 }
-.address {
-  font-style: normal;
+.nav-address {
+  margin-left: auto;
 }
 .addr-list {
+  display: flex;
+
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
 }
+.addr-list .addr-item + .addr-item {
+  margin-left: 40px;
+}
 .addr-list .address-link {
   color: var(--main-text-color);
+
   text-decoration: none;
 }
 .addr-list .address-link:hover,
@@ -75,9 +130,13 @@ body {
 
 /* Hero */
 .section.hero {
+  text-align: center;
   background-color: var(--main-title-color);
 }
-.section-title.hero-title {
+.hero-title {
+  padding-top: 188px;
+  padding-bottom: 48px;
+
   color: var(--main-background-color);
 
   font-weight: 700;
@@ -86,7 +145,30 @@ body {
   letter-spacing: 0.02em;
   text-align: center;
 }
+
+.btn {
+  display: inline-block;
+  margin-bottom: 188px;
+  padding: 16px 32px;
+  border-radius: 4px;
+  border: none;
+
+  background-color: var(--secondary-text-color);
+  color: var(--secondary-title-color);
+
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+
+  cursor: pointer;
+}
+
+/* Section skills */
 .section-title {
+  margin-bottom: 72px;
+
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
@@ -94,24 +176,18 @@ body {
   letter-spacing: 0.02em;
   text-transform: capitalize;
 }
-
-.btn {
-  cursor: pointer;
-  background-color: var(--secondary-text-color);
-  color: var(--secondary-title-color);
-  border: none;
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-}
-
-/* Section skills */
 .section-title.transparent {
-  visibility: hidden;
+  display: none;
 }
-.section-title.pro-title {
+.skills-list {
+  display: flex;
+}
+.skills-list .skills-item:not(:last-child) {
+  margin-right: 24px;
+}
+.pro-title {
+  margin-bottom: 8px;
+
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -124,8 +200,36 @@ body {
   line-height: 1.5;
 }
 
+/* Section works */
+.work-list {
+  display: flex;
+}
+.work-list .work-item:not(:last-child) {
+  margin-right: 24px;
+}
+.img-work {
+  display: block;
+}
+
 /* Section team */
-.section-title.card-title {
+.section-team {
+  padding-bottom: 0;
+}
+.team-list {
+  display: flex;
+}
+.team-list .team-item:not(:last-child) {
+  margin-right: 24px;
+}
+.team-item {
+  margin-bottom: 120px;
+}
+.img-team {
+  display: block;
+}
+.card-title {
+  margin-top: 32px;
+  margin-bottom: 8px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -133,6 +237,7 @@ body {
   text-align: center;
 }
 .about-text {
+  margin-bottom: 32px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
@@ -177,11 +282,18 @@ body {
 .footer {
   background-color: var(--main-title-color);
 }
+.page-footer {
+  width: 264px;
+  margin-left: 156px;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
 
 .logo .logo-stud {
   color: var(--button-bg-color);
 }
 .foot-text {
+  padding-top: 16px;
   color: var(--main-background-color);
   font-family: "Roboto", sans-serif;
   font-style: normal;
