--- a/css/styles.css
+++ b/css/styles.css
@@ -104,6 +104,7 @@ p {
   color: var(--list-color);
 }
 .nav-address {
+  font-style: normal;
   margin-left: auto;
 }
 .addr-list {
@@ -128,12 +129,13 @@ p {
 
 /* Hero */
 .section.hero {
+  padding-top: 188px;
+  padding-bottom: 188px;
   text-align: center;
   background-color: var(--main-title-color);
 }
 .hero-title {
-  padding-top: 188px;
-  padding-bottom: 48px;
+  margin-bottom: 48px;
 
   color: var(--main-background-color);
 
@@ -146,7 +148,6 @@ p {
 
 .btn {
   display: inline-block;
-  margin-bottom: 188px;
   padding: 16px 32px;
   border-radius: 4px;
   border: none;
@@ -199,6 +200,10 @@ p {
 }
 
 /* Section works */
+.section-works {
+  padding-top: 0;
+  padding-bottom: 120px;
+}
 .work-list {
   display: flex;
 }
@@ -210,9 +215,6 @@ p {
 }
 
 /* Section team */
-.section-team {
-  padding-bottom: 0;
-}
 .team-list {
   display: flex;
 }
