--- a/css/styles.css
+++ b/css/styles.css
@@ -215,6 +215,11 @@ p {
 }
 
 /* Section team */
+.section-team {
+  background-color: var(--button-bg-color);
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
 .team-list {
   display: flex;
 }
@@ -222,13 +227,21 @@ p {
   margin-right: 24px;
 }
 .team-item {
-  margin-bottom: 120px;
+  margin: 0;
 }
 .img-team {
   display: block;
+  margin: 0;
+}
+.team-blok {
+  padding-top: 32px;
+  padding-bottom: 32px;
+
+  background-color: var(--main-background-color);
+
+  border-radius: 0px 0px 4px 4px;
 }
 .card-title {
-  margin-top: 32px;
   margin-bottom: 8px;
 
   font-weight: 500;
@@ -238,8 +251,6 @@ p {
   text-align: center;
 }
 .about-text {
-  margin-bottom: 32px;
-
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
@@ -248,14 +259,14 @@ p {
 
 /* Portfolio */
 .section.port-section {
-  padding-top: 0;
-  padding-bottom: 0;
+  padding-top: 96px;
+  padding-bottom: 120px;
 }
 .buttons-list {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 96px 72px;
+  margin-bottom: 72px;
 }
 .buttons-list .buttons-item:not(:last-child) {
   margin-right: 24px;
@@ -264,9 +275,10 @@ p {
   display: inline-block;
   padding: 12px 24px;
 
-  background-color: var(--main-background-color);
+  background-color: var(--button-bg-color);
   color: var(--secondary-text-color);
-  border: none;
+  border: 1px solid var(--color-line);
+  border-radius: 4px;
 
   font-family: "Roboto", sans-serif;
   font-style: normal;
@@ -286,11 +298,12 @@ p {
 .projects-list {
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 120px;
+  /* margin: 0; */
 }
 .projects-item {
   margin-right: 24px;
   margin-bottom: 48px;
+  border: 1px solid var(--color-line);
 }
 .projects-item:nth-child(3n) {
   margin-right: 0;
@@ -301,8 +314,11 @@ p {
 .img-projects {
   margin: 0;
 }
+.project-work {
+  padding: 32px 0px 32px 16px;
+}
 .works-title {
-  margin-top: 32px;
+  /* margin-top: 32px; */
   margin-bottom: 8px;
 
   color: var(--main-title-color);
@@ -314,7 +330,7 @@ p {
   text-align: left;
 }
 .pro-text {
-  margin-bottom: 32px;
+  /* margin-bottom: 32px; */
 
   color: var(--main-text-color);
 
@@ -324,26 +340,21 @@ p {
 
 /* Footer */
 .footer {
-  background-color: var(--main-title-color);
-}
-.page-footer {
-  width: 264px;
-  margin-left: 156px;
   padding-top: 100px;
   padding-bottom: 100px;
-}
 
+  background-color: var(--main-title-color);
+}
 .logo .logo-stud {
   color: var(--button-bg-color);
 }
 .foot-text {
-  padding-top: 16px;
+  width: 264px;
+  margin-top: 16px;
 
   color: var(--main-background-color);
 
   font-family: "Roboto", sans-serif;
-  font-style: normal;
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
